add variable for embedding model name

--- a/chart/templates/rag/deployment.yaml
+++ b/chart/templates/rag/deployment.yaml
@@ -41,6 +41,8 @@ spec:
             value: "{{ .Values.env.sslVerification }}"
           - name: PREFIX
             value: "{{ .Values.env.prefix }}"
+          - name: EMBEDDING_MODEL_NAME
+            value: "{{ .Values.env.embeddingModelName }}"
           ports:
             - containerPort: 8000
           livenessProbe:
