--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -16,6 +16,7 @@ env:
   responseMode: "###ZARF_VAR_RESPONSE_MODE###"
   sslVerification: "###ZARF_VAR_SSL_VERIFICATION###"
   prefix: "###ZARF_VAR_PREFIX###"
+  embeddingModelName: "###ZARF_VAR_EMBEDDING_MODEL_NAME###"
 
 package:
   host: leapfrogai-rag
