fix: default variables

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 OPENAI_API_BASE=https://localhost:8080/openai/v1/
 OPENAI_API_KEY=my-test-key
-MODEL=llamacpp
+MODEL=llama-cpp-python
 TEMPERATURE=0.2
 CONTEXT_WINDOW=8192
 MAX_OUTPUT=1024
