Adds top-k option to env vars

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 OPENAI_API_BASE=https://localhost:8080/openai/v1/
 OPENAI_API_KEY=my-test-key
-MODEL=llama-cpp-python
+MODEL=vllm
 TEMPERATURE=0.2
 CONTEXT_WINDOW=8192
 MAX_OUTPUT=1024
@@ -10,3 +10,4 @@ RESPONSE_MODE=refine
 SSL_VERIFICATION=False
 PREFIX=
 EMBEDDING_MODEL_NAME=hkunlp/instructor-xl
+TOP_K=10
