--- a/zarf.yaml
+++ b/zarf.yaml
@@ -22,7 +22,7 @@ variables:
     sensitive: false
   - name: MODEL
     description: Model to query when performing refining queries
-    default: "llama-cpp-python"
+    default: "vllm"
     prompt: true
     sensitive: false
   - name: TEMPERATURE
@@ -52,7 +52,7 @@ variables:
     sensitive: false
   - name: RESPONSE_MODE
     description: Response mode to use when querying the vector store
-    default: "refine"
+    default: "raw"
     prompt: true
     sensitive: false
   - name: SSL_VERIFICATION
@@ -68,6 +68,11 @@ variables:
   - name: EMBEDDING_MODEL_NAME
     description: Embedding model name
     default: "text-embeddings"
+    prompt: true
+    sensitive: false
+  - name: TOP_K
+    description: The maximum number of results to return when querying the vector db
+    default: "10"
     prompt: true
     sensitive: false
 
